Fix up a few more issues on the nav - aligned w/ WICG site

--- a/frontend/app/tailwind.css
+++ b/frontend/app/tailwind.css
@@ -28,11 +28,19 @@
       'Segoe UI Symbol',
       'Noto Color Emoji';
   }
+  a,
+  button,
+  [role='tab'] {
+    @apply rounded-lg;
+    @apply focus:outline-none;
+    @apply focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-nav-link-hover;
+  }
 }
 
 @layer components {
-  .focusable-nav-item {
-    @apply rounded-lg transition-colors ease-in;
+  a.focusable-nav-item,
+  button.focusable-nav-item {
+    @apply rounded-lg transition-colors duration-200 ease-in;
     @apply hover:bg-secondary-hover-surface hover:text-nav-link-hover;
     @apply focus:outline-none focus-visible:bg-secondary-hover-surface focus-visible:text-nav-link-hover;
     @apply focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-0 focus-visible:outline-nav-link-hover;
